feat: added offcanvas-cart in header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>DeliveBoo</title>
   <title>Modal Component</title>
-  <script src="https://unpkg.com/vue@2"></script>
+  <script src="https://unpkg.com/vue@3"></script>
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
   <!--   <link rel="stylesheet" type="text/css" href="/style.css" /> -->
 </head>
 
