--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   <title>Modal Component</title>
   <script src="https://unpkg.com/vue@3"></script>
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
+  <script src="https://js.braintreegateway.com/web/dropin/1.42.0/js/dropin.js"></script>
+  <!-- includes the Braintree JS client SDK --> 
+ <script src="https://js.braintreegateway.com/web/dropin/1.42.0/js/dropin.min.js"></script> 
+ <!-- includes jQuery -->
+<script src="http://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
   <!--   <link rel="stylesheet" type="text/css" href="/style.css" /> -->
 </head>
 
