--- a/index.html
+++ b/index.html
@@ -17,17 +17,21 @@
   <title>Modal Component</title>
   <script src="https://unpkg.com/vue@3"></script>
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
-  <script src="https://js.braintreegateway.com/web/dropin/1.42.0/js/dropin.js"></script>
+  <!-- <script src="https://js.braintreegateway.com/web/dropin/1.42.0/js/dropin.js"></script> -->
   <!-- includes the Braintree JS client SDK -->
-  <script src="https://js.braintreegateway.com/web/dropin/1.42.0/js/dropin.min.js"></script>
+  <!-- <script src="https://js.braintreegateway.com/web/dropin/1.42.0/js/dropin.min.js"></script> -->
   <!-- includes jQuery -->
-  <script src="http://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
+  <!-- <script src="http://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script> -->
   <!--   <link rel="stylesheet" type="text/css" href="/style.css" /> -->
+  <script src="https://js.braintreegateway.com/web/3.101.0/js/client.min.js"></script>
+  <script src="https://js.braintreegateway.com/web/3.101.0/js/hosted-fields.min.js"></script>
+  <script src="http://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
